--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/express": "^4.17.8",
     "@types/mongodb": "^3.6.10",
+    "@types/node": "^14.14.6",
     "apollo-server": "^2.21.1",
     "apollo-server-express": "^2.21.1",
     "class-transformer": "^0.4.0",
@@ -41,13 +43,10 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "typeorm": "^0.2.31",
-    "uuid": "^8.3.2",
     "ts-node": "^9.0.0",
+    "typeorm": "^0.2.31",
     "typescript": "^4.0.5",
-    "@types/express": "^4.17.8",
-    "@types/node": "^14.14.6"
-
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
