--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "graphql-tools": "^7.0.4",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.0",
+    "now": "^21.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
